# SleepSupervision

./: CMakeLists.txt  README.md
src/: main.cpp
src/common/: common.hpp  defines.hpp  types.hpp
src/common/IPV4/: ipv4.cpp  ipv4.hpp
src/common/MAC/: mac.cpp  mac.hpp
src/common/computer/: computer.cpp  computer.hpp
src/common/comunication/: comunication.hpp  comunicationMonitorClient.cpp  comunicationMonitorServer.cpp  comunicationPacket.cpp  comunicationPacket.hpp  comunicationServer.cpp  comunicationType.hpp
src/common/log/: log.cpp  log.hpp
src/common/logger/: logger.cpp  logger.hpp
src/common/packet/: packet.cpp  packet.hpp
src/common/socket/: socket.cpp  socket.hpp
src/common/string/: string.cpp  string.hpp
src/common/thread/: thread.cpp  thread.hpp
src/common/wakeOnLan/: wakeOnLan.cpp  wakeOnLan.hpp
src/service/discovery/: discovery.cpp  discovery.hpp
src/service/interface/: interface.cpp  interface.hpp
src/service/manager/: manager.cpp  manager.hpp
src/service/monitor/: monitor.cpp  monitor.hpp
src/service/network/: network.hpp
src/service/network/IPV4/: ipv4.hpp
src/service/network/MAC/: mac.hpp
src/service/network/socket/: socket.cpp  socket.hpp
src/service/network/wakeOnLan/: wakeOnLan.cpp  wakeOnLan.hpp
